# voicemeeter-deskband

./: .gitignore  .gitmodules  CMakeLists.txt  Voicemeeter.sln  VoicemeeterDeskBand.sln  readme.md  todo
src/Voicemeeter/: Bus.h  CMakeLists.txt  Channel.h  Cherry.h  IBus.h  IChannel.h  IInput.h  IMixer.h  INetwork.h  IOutput.h  IRange.h  Line.h  Mixer.h  Strip.h  Voicemeeter.vcxproj  Voicemeeter.vcxproj.filters  main.cpp
src/Voicemeeter.Clients.Remote/: Api.cpp  Api.h  CMakeLists.txt  Cherry.cpp  Cherry.h  Client.cpp  Client.h  Voicemeeter.Clients.Remote.vcxproj  Voicemeeter.Clients.Remote.vcxproj.filters
src/Voicemeeter.Clients.Remote/include/: VoicemeeterRemote.h  VoicemeeterRemoteLoader.h  vmr_client.h
src/Voicemeeter.Clients.UI.Controls.Cherry/: CMakeLists.txt
src/Voicemeeter.Clients.UI.Graphics.D3D12/: CMakeLists.txt
src/Voicemeeter.Clients.UI.Palette.Oklab/: CMakeLists.txt
src/Voicemeeter.Clients.UI.Scene/: CMakeLists.txt
src/Voicemeeter.DeskBandit/: CMakeLists.txt  Messages.h  Messages.mc  Resources.rc  Version.rc  Voicemeeter.DeskBandit.vcxproj  Voicemeeter.DeskBandit.vcxproj.filters  main.cpp
src/Voicemeeter.DeskBandit/Windows/: DeskBandit.cpp  DeskBandit.h
src/Voicemeeter.DeskBandit/include/: DeskBandit.hpp  Messages.h
src/Voicemeeter.UI/: CMakeLists.txt  Direction.h  FocusTracker.cpp  FocusTracker.h  IComponent.h  IControl.h  IFocusTracker.h  IInputTracker.h  IPanel.h  IScene.h  ISystemInputTracker.h  InputTracker.cpp  InputTracker.h  Scene.cpp  Scene.h  Voicemeeter.UI.vcxproj  Voicemeeter.UI.vcxproj.filters
src/Voicemeeter.UI.Atlas/: CMakeLists.txt
src/Voicemeeter.UI.Atlas.Cherry/: CMakeLists.txt
src/Voicemeeter.UI.Atlas.Cherry/export/: Atlas.bit  Atlas.hpp
src/Voicemeeter.UI.Atlas.Cherry/include/: Atlas.h
src/Voicemeeter.UI.Atlas.Msdfgen/: CMakeLists.txt  atlas.cpp  labels.cpp
src/Voicemeeter.UI.Atlas.Msdfgen/export/: Atlas.bit
src/Voicemeeter.UI.Atlas.Msdfgen/shapes/: 1.desc  3.desc  6.desc  8.desc  9.desc  B.desc  knob_frame.desc  knob_indicator.desc  labels.info  plug_frame.desc  vban_frame.desc
src/Voicemeeter.UI.Atlas/loader/: Atlas.bit
src/Voicemeeter.UI.Cherry/: CMakeLists.txt  Voicemeeter.UI.Cherry.vcxproj  Voicemeeter.UI.Cherry.vcxproj.filters  \
src/Voicemeeter.UI.Cherry/Controls/: Knob.h  Plug.h  Vban.h
src/Voicemeeter.UI.Cherry/Decorators/Bundle/: Animation.h
src/Voicemeeter.UI.Cherry/Decorators/Interactivity/: Knob.h  Plug.h  Vban.h
src/Voicemeeter.UI.Cherry/Graphics/: Canvas.h  Glyph.h  Palette.h
src/Voicemeeter.UI.Cherry/Graphics/Bundles/: Knob.h  Plug.h  Vban.h
src/Voicemeeter.UI.Cherry/States/: Knob.h
src/Voicemeeter.UI.Controls.Cherry/: CMakeLists.txt
src/Voicemeeter.UI.D3D12/: CMakeLists.txt  Scene.cpp  Scene.h  Shaders.h  Shaders.rc  Voicemeeter.UI.D3D12.vcxproj  Voicemeeter.UI.D3D12.vcxproj.filters
src/Voicemeeter.UI.D3D12/Graphics/: Canvas.cpp  Canvas.h  Glyph.h  Palette.cpp  Palette.h
src/Voicemeeter.UI.D3D12/Graphics/Bundles/: Knob.h  Plug.h  Vban.h
src/Voicemeeter.UI.D3D12/Shaders/: Pixel.hlsl  Vertex.hlsl
src/Voicemeeter.UI.Graphics.D3D12/: CMakeLists.txt
src/Voicemeeter.UI.Graphics.D3D12/export/: Blender.hlsl  Pixel.hlsl  Vertex.hlsl
src/Voicemeeter.UI.Graphics.D3D12/include/: Loader.h
src/Voicemeeter.UI.Graphics.D3D12/link/: Vertex.hlsl
src/Voicemeeter.UI.Layouts/: CMakeLists.txt
src/Voicemeeter.UI.Loader.Windows/: CMakeLists.txt  rc.compression.cpp  rc.cpp  rc.hpp.cpp
src/Voicemeeter.UI.Palette.Oklab/: CMakeLists.txt
src/Voicemeeter.UI.Palette.Oklab/include/: ok_color.h
src/Voicemeeter.UI/Controls/: Carousel.h  Checkbox.h  Knob.h  Slider.h  State.h
src/Voicemeeter.UI/Decorators/: Margin.h  RegionCheck.h
src/Voicemeeter.UI/Decorators/Interactivity/: Carousel.h  Checkbox.h  Knob.h  Slider.h
src/Voicemeeter.UI/Graphics/: ICanvas.h  IGlyph.h
src/Voicemeeter.UI/Graphics/Glyphs/: Frame.cpp  Frame.h
src/Voicemeeter.UI/Panels/: Stack.cpp  Stack.h
src/Voicemeeter.UI/Policies/: CarouselGlyphUpdate.cpp  CarouselGlyphUpdate.h  CarouselInteractivity.cpp  CarouselInteractivity.h  CheckboxInteractivity.h  CheckboxStateChange.h  CircularStateChange.h  IGlyphUpdate.h  IInteractivity.h  IStateChange.h  IStatePromotion.h  KnobInteractivity.h  KnobStateChange.h  RangeStateChange.h  SliderGlyphUpdate.h  SliderInteractivity.h
src/Voicemeeter.UI/Policies/Glyph/: IUpdate.h
src/Voicemeeter.UI/Policies/State/: IChange.h  IPromotion.h
src/Voicemeeter.UI/States/: Knob.h
src/Voicemeeter.UI/Trackers/: Dirty.cpp  Dirty.h  Focus.cpp  Focus.h  IDirty.h  IFocus.h  IInput.h  Input.cpp  Input.h
src/Voicemeeter.UI/Traits/: IInteractive.h  IMovable.h  IResizable.h  IScalable.h  IVisible.h
src/Voicemeeter/Adapters/: Amplifier.h  Mute.h  Network.h
src/Voicemeeter/Adapters/Multiclient/: Bus.h  Cherry.cpp  Cherry.h  Line.h  Strip.h
src/Voicemeeter/Decorators/: IAmplifier.h
src/Voicemeeter/Multiclient/: Manager.h  Subscription.h
src/Voicemeeter/Windows/: Window.cpp
src/Voicemeeter/include/Voicemeeter/: Bus.hpp  Channel.hpp  Cherry.hpp  Group.hpp  Mixer.hpp  Strip.hpp
src/Windows/: CMakeLists.txt  Error.h  ErrorMessageBox.cpp  ErrorMessageBox.h  Registry.cpp  Registry.h  Timer.cpp  Timer.h  Windows.vcxproj  Windows.vcxproj.filters  Wrappers.h
src/Windows/include/Windows/: API.hpp  Error.hpp  Timer.hpp
src/clients/vbvmr/: CMakeLists.txt
src/clients/vbvmr/include/: vmr_client.h
src/clients/wui/controls/: CMakeLists.txt
src/clients/wui/graphics/: CMakeLists.txt
src/clients/wui/loader/: CMakeLists.txt
src/clients/wui/palette/: CMakeLists.txt
src/deskbandit/: CMakeLists.txt  Messages.mc  Version.rc  main.cpp
src/deskbandit/include/: DeskBandit.hpp  ErrorMessageBox.hpp
src/voicemeeter/: CMakeLists.txt
src/voicemeeter/include/Voicemeeter/: Bus.hpp  Channel.hpp
src/wheel/: CMakeLists.txt
src/wheel/include/: wheel.hpp
src/wui/atlas/: CMakeLists.txt  atlas.cpp  bit.combine.cpp  bit.pre.transform.cpp  main.cpp
src/wui/atlas/shapes/: 0.desc  2.desc  4.desc  5.desc  7.desc  A.desc  P.desc  V.desc  knob_indicator.desc  (+3 more)
src/wui/controls/: CMakeLists.txt
(+583 files in other folders)
