cmake_minimum_required(VERSION 3.25.1)

project(Voicemeeter.DeskBand VERSION 0.9)

set(WUI_LOADER Windows CACHE STRING)
set(WUI_PALETTE Oklab CACHE STRING)
set(WUI_GRAPHICS D3D12 CACHE STRING)

if(MSVC)
  add_compile_options(/bigobj)
  if(CMAKE_BUILD_TYPE STREQUAL Debug)
    set(CMAKE_MSVC_RUNTIME_LIBRARY MultiThreadedDebug)
  else()
    set(CMAKE_MSVC_RUNTIME_LIBRARY MultiThreaded)
  endif()
  add_compile_options(/GR-)
elseif(LINUX)
  set(CMAKE_EXE_LINKER_FLAGS "--static -static-libgcc -static-libstdc++")
endif()

add_subdirectory(third_party)
add_subdirectory(src/wui)
add_subdirectory(src/voicemeeter)
add_subdirectory(src/clients)
add_subdirectory(src/deskbandit)
